edit readme and data loading

--- a/app/src/main/res/layout/article_fragment.xml
+++ b/app/src/main/res/layout/article_fragment.xml
@@ -20,6 +20,17 @@
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:listitem="@layout/article_item"
             />
+        <TextView
+            android:id="@+id/loading"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Data Loading..."
+            android:textSize="30dp"
+            android:textColor="@color/purple_500"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
         <ImageView
             android:id="@+id/internet_img"
             android:layout_width="100dp"
